--- a/src/style.css
+++ b/src/style.css
@@ -118,3 +118,15 @@ a.active {
 button.edit {
   margin-right: 5px !important;
 }
+.comment_name {
+  font-size: 16px;
+  font-weight: bold;
+  color: #505254;
+}
+.comment_time {
+  font-size: 12px;
+  color: #7d7e80;
+}
+.comment_conetnt {
+  font-size: 20px;
+}
